ft-core/tests/snapshots/templates__daily.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
---
tags: [Created-2026-05-13]
---
# 2026-05-13
### Done
🎉
```tasks
(done 2026-05-13)
sort by due
sort by priority
sort by created
```
## Time Blocks
## Notes
