ft-core/tests/snapshots/templates__father-watson.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
- **What do you know? (Understanding)**
- **Where are you at? (Progress)**
- **What do you need to know? (Understanding, Approach)**
- **Where are you going? (Progress, Approach)**
