ft-core/tests/snapshots/templates__inbox.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
---
tags: [Created-2026-05-13, inbox]
---
# 2026-05-13-0000
