ft-core/tests/snapshots/templates__new.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
---
tags: [Created-2026-05-13]
---
# Test Note
