ft-core/tests/snapshots/templates__progress-checkin.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
- Progress Checkin
    - **Which work streams had recent progress?**
    - **Which work streams did not?**
    - **Which work streams have approaching deadlines?**
    - **What are resulting priorities and why?**
