ft-core/tests/snapshots/templates__proj.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
---
tags: [Created-2026-05-13, PROJ, Project]
---
# Test Project
-short description-
## Status
Proposed <progress max=100 value=0 />
## Scope and Success
-what is the definition of done? how does success look like?-
## Execution
%% Begin Waypoint %%

%% End Waypoint %%

```tasks
(not done) AND ((path includes Test Project) OR (description includes [[{title}]]))
show tree
group by filename
sort by due
sort by priority
sort by created
```
