ft-core/tests/snapshots/templates__quarterly.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
---
tags:
  - Quarterly
---
# 2026 Q2
1. ...
