ft-core/tests/snapshots/templates__quick-add.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
---
tags: [Created-2026-05-13]
---
# Quick
