ft-core/tests/snapshots/templates__restaurant.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
#Restaurant #SaoPaulo #WhereToTakeGuests 
# Test Restaurant
