ft-core/tests/snapshots/templates__tasks-in-this-path.snap
---
source: ft-core/tests/templates.rs
expression: rendered
---
```tasks
(not done) AND (path includes Tasks Here)
show tree
group by filename
```
